--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 actix = "0.9"
 bson = "1.1.0"
 clap = "3.0.0-beta.1"
+dotenv = "0.15.0"
 openssl-probe = { version = "0.1.2" }
 serde_json = "1.0.55"
 tokio = { version = "0.2", features = ["sync"] }
