--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ dotenv = "0.15.0"
 openssl-probe = { version = "0.1.2" }
 serde_json = "1.0.55"
 tokio = { version = "1.1.1", features = ["sync"] }
+tokio-stream = "0.1"
 tracing-subscriber = "0.2.4"
 tokio-diesel = "0.3.0"
 diesel = { version = "1.4.5", features = ["chrono", "postgres", "numeric", "serde_json"] }
