--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2018"
 
 [dependencies]
 actix = "0.11.0-beta.1"
-actix-web = "3"
+actix-web = "4.0.0-beta.1"
+actix-rt = "2.0.0-beta.2"
 bson = "1.1.0"
 clap = "3.0.0-beta.1"
 dotenv = "0.15.0"
