--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,16 @@ edition = "2018"
 
 [dependencies]
 actix = "0.11.0-beta.1"
-actix-web = "3"
+actix-web = "4.0.0-beta.1"
+actix-rt = "=2.0.0-beta.2"
 bson = "1.1.0"
 clap = "3.0.0-beta.1"
 dotenv = "0.15.0"
 openssl-probe = { version = "0.1.2" }
 serde_json = "1.0.55"
-tokio = { version = "1.1.1", features = ["sync"] }
+tokio = { version = "1.1", features = ["sync", "time"] }
+tokio-stream = { version = "0.1" }
 tracing-subscriber = "0.2.4"
-tokio-diesel = "0.3.0"
-diesel = { version = "1.4.5", features = ["chrono", "postgres", "numeric", "serde_json"] }
 bigdecimal = "0.1.2"
 chrono = "0.4.13"
 mongodb = "2.0.0-alpha"
@@ -24,4 +24,5 @@ near-store = { git = "https://github.com/nearprotocol/nearcore", rev="f31cfb954b
 near-chain = { git = "https://github.com/nearprotocol/nearcore", rev="f31cfb954bdd81885bc789bfa406035717db5ab5" }
 neard = { git = "https://github.com/nearprotocol/nearcore", rev="f31cfb954bdd81885bc789bfa406035717db5ab5" }
 near-chain-configs = { git = "https://github.com/nearprotocol/nearcore", rev="f31cfb954bdd81885bc789bfa406035717db5ab5" }
+near-crypto = { git = "https://github.com/nearprotocol/nearcore", rev="f31cfb954bdd81885bc789bfa406035717db5ab5" }
 qstring = "0.7.2"
