--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,11 @@ authors = ["Near Inc <hello@nearprotocol.com>"]
 edition = "2018"
 
 [dependencies]
-actix = "0.11.0-beta.1"
-actix-web = "4.0.0-beta.1"
-actix-rt = "2.0.0-beta.2"
+actix = "=0.11.0-beta.3"
+actix-web = "=4.0.0-beta.3"
+actix-http = "=3.0.0-beta.3"
+actix-tls = "=3.0.0-beta.3"
+funty = "=1.1.0"
 bson = "1.1.0"
 clap = "3.0.0-beta.1"
 dotenv = "0.15.0"
@@ -16,14 +18,13 @@ serde_json = "1.0.55"
 tokio = { version = "1.1.1", features = ["sync"] }
 tokio-stream = "0.1"
 tracing-subscriber = "0.2.4"
-tokio-diesel = "0.3.0"
-diesel = { version = "1.4.5", features = ["chrono", "postgres", "numeric", "serde_json"] }
 bigdecimal = "0.1.2"
 chrono = "0.4.13"
 mongodb = "2.0.0-alpha"
-near-indexer = { git = "https://github.com/nearprotocol/nearcore", rev="f31cfb954bdd81885bc789bfa406035717db5ab5" }
-near-store = { git = "https://github.com/nearprotocol/nearcore", rev="f31cfb954bdd81885bc789bfa406035717db5ab5" }
-near-chain = { git = "https://github.com/nearprotocol/nearcore", rev="f31cfb954bdd81885bc789bfa406035717db5ab5" }
-neard = { git = "https://github.com/nearprotocol/nearcore", rev="f31cfb954bdd81885bc789bfa406035717db5ab5" }
-near-chain-configs = { git = "https://github.com/nearprotocol/nearcore", rev="f31cfb954bdd81885bc789bfa406035717db5ab5" }
+near-indexer = { git = "https://github.com/nearprotocol/nearcore", rev="69eddab7a0d59fd255b71bd6362787f84457c483" }
+near-store = { git = "https://github.com/nearprotocol/nearcore", rev="69eddab7a0d59fd255b71bd6362787f84457c483" }
+near-chain = { git = "https://github.com/nearprotocol/nearcore", rev="69eddab7a0d59fd255b71bd6362787f84457c483" }
+neard = { git = "https://github.com/nearprotocol/nearcore", rev="69eddab7a0d59fd255b71bd6362787f84457c483" }
+near-chain-configs = { git = "https://github.com/nearprotocol/nearcore", rev="69eddab7a0d59fd255b71bd6362787f84457c483" }
+near-crypto = { git = "https://github.com/nearprotocol/nearcore", rev="69eddab7a0d59fd255b71bd6362787f84457c483" }
 qstring = "0.7.2"
