--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ actix-tls = "=3.0.0-beta.5"
 actix_derive = "=0.6.0-beta.1"
 funty = "=1.1.0"
 bson = "1.1.0"
+borsh = "0.7.1"
 clap = "3.0.0-beta.1"
 dotenv = "0.15.0"
 openssl-probe = { version = "0.1.2" }
@@ -22,6 +23,6 @@ tracing-subscriber = "0.2.4"
 bigdecimal = "0.1.2"
 chrono = "0.4.13"
 mongodb = "2.0.0-alpha"
-near-indexer = { git = "https://github.com/nearprotocol/nearcore", rev="5a6fb2bd28eca69d38a1f85e7f5fe520cdedbca5" }
-neard = { git = "https://github.com/nearprotocol/nearcore", rev="5a6fb2bd28eca69d38a1f85e7f5fe520cdedbca5" }
+near-indexer = { git = "https://github.com/near/nearcore", rev="397a7a45b8efd3e4604374a4efabd567c03c0a19" }
+neard = { git = "https://github.com/near/nearcore", rev="397a7a45b8efd3e4604374a4efabd567c03c0a19" }
 qstring = "0.7.2"
